# simple-cam

./: CMakeLists.txt  simple-cam.cpp
